--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -1,13 +1,19 @@
 - title: Home
   href: index.html
 
-- title: About
-  href: about.html
+#- title: About
+#  href: about.html
+
+- title: Publications
+  href: publications.html
+
+- title: Art
+  href: art.html
+
+- title: CV/Resume
+  href: cv.html
 
 - title: Posts
   href: list/posts.html
-
-- title: Documentation
-  href: list/projects.html
 
 
