--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -1,20 +1,24 @@
-- caption: Friday Theme on GitHub
-  href: https://github.com/sfreytag/friday-theme
+- caption: ekokind@clemson.edu
+  href: mailto:ekokind@clemson.edu
+  icon: entypo/email.svg
+
+- caption: Github
+  href: https://github.com/ekokind
   icon: entypo/github.svg
 
-- caption: Stack Overflow
-  href: https://stackoverflow.com
-  icon: icons/stackoverflow.svg
+#- caption: Stack Overflow
+#  href: https://stackoverflow.com
+#  icon: icons/stackoverflow.svg
 
-- caption: Facebook
-  href: https://www.facebook.com
-  icon: entypo/facebook.svg
+#- caption: Facebook
+#  href: https://www.facebook.com
+#  icon: entypo/facebook.svg
 
-- caption: Twitter
-  href: https://www.twitter.com
+- caption: ninjabrer
+  href: https://www.twitter.com/ninjabrer
   icon: entypo/twitter.svg
 
-- caption: London
-  href: https://www.google.co.uk/maps/place/London/@51.528308,-0.3817765,10z/data=!3m1!4b1!4m5!3m4!1s0x47d8a00baf21de75:0x52963a5addd52a99!8m2!3d51.5073509!4d-0.1277583
+- caption: Charleston, SC
+#  href: https://www.google.co.uk/maps/place/London/@51.528308,-0.3817765,10z/data=!3m1!4b1!4m5!3m4!1s0x47d8a00baf21de75:0x52963a5addd52a99!8m2!3d51.5073509!4d-0.1277583
   icon: entypo/location-pin.svg
 
