--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -14,6 +14,10 @@
 #  href: https://www.facebook.com
 #  icon: entypo/facebook.svg
 
+- caption: Art Instagram
+  href: https://www.instagram.com/kokicraft/
+  icon: entypo/instagram.svg
+
 - caption: ninjabrer
   href: https://www.twitter.com/ninjabrer
   icon: entypo/twitter.svg
