--- a/_data/profile.yml
+++ b/_data/profile.yml
@@ -22,6 +22,10 @@
   href: https://www.twitter.com/ninjabrer
   icon: entypo/twitter.svg
 
+ - caption: Twitch Streams
+   href: https://www.twitch.tv/ninjabrer
+   icon: entypo/video-camera.svg
+
 - caption: Charleston, SC
 #  href: https://www.google.co.uk/maps/place/London/@51.528308,-0.3817765,10z/data=!3m1!4b1!4m5!3m4!1s0x47d8a00baf21de75:0x52963a5addd52a99!8m2!3d51.5073509!4d-0.1277583
   icon: entypo/location-pin.svg
