Updating nav bar and getting projects to show up

--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -16,5 +16,9 @@
 - title: Posts
   href: list/posts.html
 
-- title: Participate
-  href: participate.html
+#- title: Participate
+#  href: participate.html
+
+- title: Projects
+  href: projects/projects.html
+
