--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,9 @@ permalink: /:categories/:year/:month/:day/:title.html
 # Conversion
 markdown:         kramdown
 highlighter:      rouge
+kramdown:
+  syntax_highlighter_opts:
+    disable: true
 excerpt_separator: <!--more-->
 
 # Config for your profile.
